v1.0.0/modules/schema/pages/class/WindPlantReactiveControlIEC.adoc
= `WindPlantReactiveControlIEC`
:toclevels: 4


+++Simplified plant voltage and reactive power control model for use with type 3 and type 4 wind turbine models.
Reference: IEC 61400-27-1:2015, Annex D.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:WindPlantReactiveControlIEC`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`WindPlantReactiveControlIEC`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
WindPlantReactiveControlIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}

































WindDynamicsLookupTable {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindPlantIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



















WindPlantReactiveControlIEC -> WindDynamicsLookupTable: WindDynamicsLookupTable


WindPlantReactiveControlIEC -> WindPlantIEC: WindPlantIEC


WindPlantReactiveControlIEC -> DiagramObject: DiagramObjects


WindPlantReactiveControlIEC -> InstanceSet: InstanceSet


WindPlantReactiveControlIEC -> Name: Names


WindPlantReactiveControlIEC -> ChangeSetMember: PropertiesCIMDataObject


WindPlantReactiveControlIEC -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<WindPlantIEC,`WindPlantIEC`>>
| 1
| xref::class/WindPlantIEC.adoc[`WindPlantIEC`]
| +++Wind plant reactive control model associated with this wind plant.+++

| <<WindDynamicsLookupTable,`WindDynamicsLookupTable`>>
| 1..*
| xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`]
| +++The wind dynamics lookup table associated with this voltage and reactive power wind plant model.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<dxrefmax,`dxrefmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum positive ramp rate for wind turbine reactive power/voltage reference (<i>dx</i><i><sub>refmax</sub></i>) (&gt; WindPlantReactiveControlIEC.dxrefmin). It is a project-dependent parameter.+++

| <<dxrefmin,`dxrefmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum negative ramp rate for wind turbine reactive power/voltage reference (<i>dx</i><i><sub>refmin</sub></i>) (&lt; WindPlantReactiveControlIEC.dxrefmax). It is a project-dependent parameter.+++

| <<kiwpx,`kiwpx`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Plant Q controller integral gain (<i>K</i><i><sub>IWPx</sub></i>). It is a project-dependent parameter.+++

| <<kiwpxmax,`kiwpxmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum reactive power/voltage reference from integration (<i>K</i><i><sub>IWPxmax</sub></i>) (&gt; WindPlantReactiveControlIEC.kiwpxmin). It is a project-dependent parameter.+++

| <<kiwpxmin,`kiwpxmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum reactive power/voltage reference from integration (<i>K</i><i><sub>IWPxmin</sub></i>) (&lt; WindPlantReactiveControlIEC.kiwpxmax). It is a project-dependent parameter.+++

| <<kpwpx,`kpwpx`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Plant Q controller proportional gain (<i>K</i><i><sub>PWPx</sub></i>). It is a project-dependent parameter.+++

| <<kwpqref,`kwpqref`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Reactive power reference gain (<i>K</i><i><sub>WPqref</sub></i>). It is a project-dependent parameter.+++

| <<kwpqu,`kwpqu`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Plant voltage control droop (<i>K</i><i><sub>WPqu</sub></i>). It is a project-dependent parameter.+++

| <<tuqfilt,`tuqfilt`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant for voltage-dependent reactive power (<i>T</i><i><sub>uqfilt</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++

| <<twppfiltq,`twppfiltq`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant for active power measurement (<i>T</i><i><sub>WPpfiltq</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++

| <<twpqfiltq,`twpqfiltq`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant for reactive power measurement (<i>T</i><i><sub>WPqfiltq</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++

| <<twpufiltq,`twpufiltq`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant for voltage measurement (<i>T</i><i><sub>WPufiltq</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++

| <<txft,`txft`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Lead time constant in reference value transfer function (<i>T</i><i><sub>xft</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++

| <<txfv,`txfv`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Lag time constant in reference value transfer function (<i>T</i><i><sub>xfv</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++

| <<uwpqdip,`uwpqdip`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage threshold for UVRT detection in Q control (<i>u</i><i><sub>WPqdip</sub></i>). It is a project-dependent parameter.+++

| <<windPlantQcontrolModesType,`windPlantQcontrolModesType`>>
| 0..1
| xref::enumeration/WindPlantQcontrolModeKind.adoc[`WindPlantQcontrolModeKind`]
| +++Reactive power/voltage controller mode (<i>M</i><i><sub>WPqmode</sub></i>). It is a case-dependent parameter.+++

| <<xrefmax,`xrefmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum <i>x</i><sub>WTref</sub> (<i>q</i><i><sub>WTref</sub></i> or delta<i> u</i><i><sub>WTref</sub></i>) request from the plant controller (<i>x</i><i><sub>refmax</sub></i>) (&gt; WindPlantReactiveControlIEC.xrefmin). It is a case-dependent parameter.+++

| <<xrefmin,`xrefmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum <i>x</i><i><sub>WTref</sub></i> (<i>q</i><i><sub>WTref</sub></i> or delta <i>u</i><i><sub>WTref</sub></i>) request from the plant controller (<i>x</i><i><sub>refmin</sub></i>) (&lt; WindPlantReactiveControlIEC.xrefmax). It is a project-dependent parameter.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#dxrefmax]
=== `dxrefmax`
+++Maximum positive ramp rate for wind turbine reactive power/voltage reference (<i>dx</i><i><sub>refmax</sub></i>) (&gt; WindPlantReactiveControlIEC.dxrefmin). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.dxrefmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#dxrefmin]
=== `dxrefmin`
+++Maximum negative ramp rate for wind turbine reactive power/voltage reference (<i>dx</i><i><sub>refmin</sub></i>) (&lt; WindPlantReactiveControlIEC.dxrefmax). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.dxrefmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kiwpx]
=== `kiwpx`
+++Plant Q controller integral gain (<i>K</i><i><sub>IWPx</sub></i>). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.kiwpx`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kiwpxmax]
=== `kiwpxmax`
+++Maximum reactive power/voltage reference from integration (<i>K</i><i><sub>IWPxmax</sub></i>) (&gt; WindPlantReactiveControlIEC.kiwpxmin). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.kiwpxmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kiwpxmin]
=== `kiwpxmin`
+++Minimum reactive power/voltage reference from integration (<i>K</i><i><sub>IWPxmin</sub></i>) (&lt; WindPlantReactiveControlIEC.kiwpxmax). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.kiwpxmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kpwpx]
=== `kpwpx`
+++Plant Q controller proportional gain (<i>K</i><i><sub>PWPx</sub></i>). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.kpwpx`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kwpqref]
=== `kwpqref`
+++Reactive power reference gain (<i>K</i><i><sub>WPqref</sub></i>). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.kwpqref`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kwpqu]
=== `kwpqu`
+++Plant voltage control droop (<i>K</i><i><sub>WPqu</sub></i>). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.kwpqu`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tuqfilt]
=== `tuqfilt`
+++Filter time constant for voltage-dependent reactive power (<i>T</i><i><sub>uqfilt</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.tuqfilt`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#twppfiltq]
=== `twppfiltq`
+++Filter time constant for active power measurement (<i>T</i><i><sub>WPpfiltq</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.twppfiltq`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#twpqfiltq]
=== `twpqfiltq`
+++Filter time constant for reactive power measurement (<i>T</i><i><sub>WPqfiltq</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.twpqfiltq`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#twpufiltq]
=== `twpufiltq`
+++Filter time constant for voltage measurement (<i>T</i><i><sub>WPufiltq</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.twpufiltq`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#txft]
=== `txft`
+++Lead time constant in reference value transfer function (<i>T</i><i><sub>xft</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.txft`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#txfv]
=== `txfv`
+++Lag time constant in reference value transfer function (<i>T</i><i><sub>xfv</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.txfv`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#uwpqdip]
=== `uwpqdip`
+++Voltage threshold for UVRT detection in Q control (<i>u</i><i><sub>WPqdip</sub></i>). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.uwpqdip`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#WindDynamicsLookupTable]
=== `WindDynamicsLookupTable`
+++The wind dynamics lookup table associated with this voltage and reactive power wind plant model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.WindDynamicsLookupTable`
| Cardinality
| 1..*
| Type
| xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`]


|===

//[discrete]
[#WindPlantIEC]
=== `WindPlantIEC`
+++Wind plant reactive control model associated with this wind plant.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.WindPlantIEC`
| Cardinality
| 1
| Type
| xref::class/WindPlantIEC.adoc[`WindPlantIEC`]


|===

//[discrete]
[#windPlantQcontrolModesType]
=== `windPlantQcontrolModesType`
+++Reactive power/voltage controller mode (<i>M</i><i><sub>WPqmode</sub></i>). It is a case-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.windPlantQcontrolModesType`
| Cardinality
| 0..1
| Type
| xref::enumeration/WindPlantQcontrolModeKind.adoc[`WindPlantQcontrolModeKind`]


|===

//[discrete]
[#xrefmax]
=== `xrefmax`
+++Maximum <i>x</i><sub>WTref</sub> (<i>q</i><i><sub>WTref</sub></i> or delta<i> u</i><i><sub>WTref</sub></i>) request from the plant controller (<i>x</i><i><sub>refmax</sub></i>) (&gt; WindPlantReactiveControlIEC.xrefmin). It is a case-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.xrefmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#xrefmin]
=== `xrefmin`
+++Minimum <i>x</i><i><sub>WTref</sub></i> (<i>q</i><i><sub>WTref</sub></i> or delta <i>u</i><i><sub>WTref</sub></i>) request from the plant controller (<i>x</i><i><sub>refmin</sub></i>) (&lt; WindPlantReactiveControlIEC.xrefmax). It is a project-dependent parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.xrefmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


