v1.1.0/modules/schema/pages/class/WindPlantReactiveControlIEC.adoc
= `WindPlantReactiveControlIEC`
:toclevels: 4


+++Simplified plant voltage and reactive power control model for use with type 3 and type 4 wind turbine models.
Reference: IEC 61400-27-1:2015, Annex D.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:WindPlantReactiveControlIEC`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`WindPlantReactiveControlIEC`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<WindDynamicsLookupTable,`WindDynamicsLookupTable`>>
//| [[slots_table.WindDynamicsLookupTable]]<<WindDynamicsLookupTable,`WindDynamicsLookupTable`>>
| 1..* +
xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`]
| +++The wind dynamics lookup table associated with this voltage and reactive power wind plant model.+++
| _n/a_

| <<WindPlantIEC,`WindPlantIEC`>>
//| [[slots_table.WindPlantIEC]]<<WindPlantIEC,`WindPlantIEC`>>
| 1 +
xref::class/WindPlantIEC.adoc[`WindPlantIEC`]
| +++Wind plant reactive control model associated with this wind plant.+++
| _n/a_

| <<dxrefmax,`dxrefmax`>>
//| [[slots_table.dxrefmax]]<<dxrefmax,`dxrefmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum positive ramp rate for wind turbine reactive power/voltage reference (<i>dx</i><i><sub>refmax</sub></i>) (&gt;...+++
| _n/a_

| <<dxrefmin,`dxrefmin`>>
//| [[slots_table.dxrefmin]]<<dxrefmin,`dxrefmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum negative ramp rate for wind turbine reactive power/voltage reference (<i>dx</i><i><sub>refmin</sub></i>) (&lt;...+++
| _n/a_

| <<kiwpx,`kiwpx`>>
//| [[slots_table.kiwpx]]<<kiwpx,`kiwpx`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Plant Q controller integral gain (<i>K</i><i><sub>IWPx</sub></i>). It is a project-dependent parameter.+++
| _n/a_

| <<kiwpxmax,`kiwpxmax`>>
//| [[slots_table.kiwpxmax]]<<kiwpxmax,`kiwpxmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum reactive power/voltage reference from integration (<i>K</i><i><sub>IWPxmax</sub></i>) (&gt;...+++
| _n/a_

| <<kiwpxmin,`kiwpxmin`>>
//| [[slots_table.kiwpxmin]]<<kiwpxmin,`kiwpxmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum reactive power/voltage reference from integration (<i>K</i><i><sub>IWPxmin</sub></i>) (&lt;...+++
| _n/a_

| <<kpwpx,`kpwpx`>>
//| [[slots_table.kpwpx]]<<kpwpx,`kpwpx`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Plant Q controller proportional gain (<i>K</i><i><sub>PWPx</sub></i>). It is a project-dependent parameter.+++
| _n/a_

| <<kwpqref,`kwpqref`>>
//| [[slots_table.kwpqref]]<<kwpqref,`kwpqref`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Reactive power reference gain (<i>K</i><i><sub>WPqref</sub></i>). It is a project-dependent parameter.+++
| _n/a_

| <<kwpqu,`kwpqu`>>
//| [[slots_table.kwpqu]]<<kwpqu,`kwpqu`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Plant voltage control droop (<i>K</i><i><sub>WPqu</sub></i>). It is a project-dependent parameter.+++
| _n/a_

| <<tuqfilt,`tuqfilt`>>
//| [[slots_table.tuqfilt]]<<tuqfilt,`tuqfilt`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant for voltage-dependent reactive power (<i>T</i><i><sub>uqfilt</sub></i>) (&gt;= 0). It is a...+++
| _n/a_

| <<twppfiltq,`twppfiltq`>>
//| [[slots_table.twppfiltq]]<<twppfiltq,`twppfiltq`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant for active power measurement (<i>T</i><i><sub>WPpfiltq</sub></i>) (&gt;= 0). It is a project-dependent...+++
| _n/a_

| <<twpqfiltq,`twpqfiltq`>>
//| [[slots_table.twpqfiltq]]<<twpqfiltq,`twpqfiltq`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant for reactive power measurement (<i>T</i><i><sub>WPqfiltq</sub></i>) (&gt;= 0). It is a...+++
| _n/a_

| <<twpufiltq,`twpufiltq`>>
//| [[slots_table.twpufiltq]]<<twpufiltq,`twpufiltq`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant for voltage measurement (<i>T</i><i><sub>WPufiltq</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++
| _n/a_

| <<txft,`txft`>>
//| [[slots_table.txft]]<<txft,`txft`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Lead time constant in reference value transfer function (<i>T</i><i><sub>xft</sub></i>) (&gt;= 0). It is a project-dependent...+++
| _n/a_

| <<txfv,`txfv`>>
//| [[slots_table.txfv]]<<txfv,`txfv`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Lag time constant in reference value transfer function (<i>T</i><i><sub>xfv</sub></i>) (&gt;= 0). It is a project-dependent...+++
| _n/a_

| <<uwpqdip,`uwpqdip`>>
//| [[slots_table.uwpqdip]]<<uwpqdip,`uwpqdip`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage threshold for UVRT detection in Q control (<i>u</i><i><sub>WPqdip</sub></i>). It is a project-dependent parameter.+++
| _n/a_

| <<windPlantQcontrolModesType,`windPlantQcontrolModesType`>>
//| [[slots_table.windPlantQcontrolModesType]]<<windPlantQcontrolModesType,`windPlantQcontrolModesType`>>
| 0..1 +
xref::enumeration/WindPlantQcontrolModeKind.adoc[`WindPlantQcontrolModeKind`]
| +++Reactive power/voltage controller mode (<i>M</i><i><sub>WPqmode</sub></i>). It is a case-dependent parameter.+++
| _n/a_

| <<xrefmax,`xrefmax`>>
//| [[slots_table.xrefmax]]<<xrefmax,`xrefmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum <i>x</i><sub>WTref</sub> (<i>q</i><i><sub>WTref</sub></i> or delta<i> u</i><i><sub>WTref</sub></i>) request from the...+++
| _n/a_

| <<xrefmin,`xrefmin`>>
//| [[slots_table.xrefmin]]<<xrefmin,`xrefmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum <i>x</i><i><sub>WTref</sub></i> (<i>q</i><i><sub>WTref</sub></i> or delta <i>u</i><i><sub>WTref</sub></i>) request...+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dxrefmax]
=== `dxrefmax`
+++Maximum positive ramp rate for wind turbine reactive power/voltage reference (<i>dx</i><i><sub>refmax</sub></i>) (&gt; WindPlantReactiveControlIEC.dxrefmin). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.dxrefmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dxrefmax,&#10548;>>
--
////


//[discrete]
[#dxrefmin]
=== `dxrefmin`
+++Maximum negative ramp rate for wind turbine reactive power/voltage reference (<i>dx</i><i><sub>refmin</sub></i>) (&lt; WindPlantReactiveControlIEC.dxrefmax). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.dxrefmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dxrefmin,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kiwpx]
=== `kiwpx`
+++Plant Q controller integral gain (<i>K</i><i><sub>IWPx</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.kiwpx`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.kiwpx,&#10548;>>
--
////


//[discrete]
[#kiwpxmax]
=== `kiwpxmax`
+++Maximum reactive power/voltage reference from integration (<i>K</i><i><sub>IWPxmax</sub></i>) (&gt; WindPlantReactiveControlIEC.kiwpxmin). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.kiwpxmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kiwpxmax,&#10548;>>
--
////


//[discrete]
[#kiwpxmin]
=== `kiwpxmin`
+++Minimum reactive power/voltage reference from integration (<i>K</i><i><sub>IWPxmin</sub></i>) (&lt; WindPlantReactiveControlIEC.kiwpxmax). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.kiwpxmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kiwpxmin,&#10548;>>
--
////


//[discrete]
[#kpwpx]
=== `kpwpx`
+++Plant Q controller proportional gain (<i>K</i><i><sub>PWPx</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.kpwpx`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.kpwpx,&#10548;>>
--
////


//[discrete]
[#kwpqref]
=== `kwpqref`
+++Reactive power reference gain (<i>K</i><i><sub>WPqref</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.kwpqref`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kwpqref,&#10548;>>
--
////


//[discrete]
[#kwpqu]
=== `kwpqu`
+++Plant voltage control droop (<i>K</i><i><sub>WPqu</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.kwpqu`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kwpqu,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tuqfilt]
=== `tuqfilt`
+++Filter time constant for voltage-dependent reactive power (<i>T</i><i><sub>uqfilt</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.tuqfilt`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tuqfilt,&#10548;>>
--
////


//[discrete]
[#twppfiltq]
=== `twppfiltq`
+++Filter time constant for active power measurement (<i>T</i><i><sub>WPpfiltq</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.twppfiltq`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.twppfiltq,&#10548;>>
--
////


//[discrete]
[#twpqfiltq]
=== `twpqfiltq`
+++Filter time constant for reactive power measurement (<i>T</i><i><sub>WPqfiltq</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.twpqfiltq`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.twpqfiltq,&#10548;>>
--
////


//[discrete]
[#twpufiltq]
=== `twpufiltq`
+++Filter time constant for voltage measurement (<i>T</i><i><sub>WPufiltq</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.twpufiltq`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.twpufiltq,&#10548;>>
--
////


//[discrete]
[#txft]
=== `txft`
+++Lead time constant in reference value transfer function (<i>T</i><i><sub>xft</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.txft`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.txft,&#10548;>>
--
////


//[discrete]
[#txfv]
=== `txfv`
+++Lag time constant in reference value transfer function (<i>T</i><i><sub>xfv</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.txfv`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.txfv,&#10548;>>
--
////


//[discrete]
[#uwpqdip]
=== `uwpqdip`
+++Voltage threshold for UVRT detection in Q control (<i>u</i><i><sub>WPqdip</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.uwpqdip`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.uwpqdip,&#10548;>>
--
////


//[discrete]
[#WindDynamicsLookupTable]
=== `WindDynamicsLookupTable`
+++The wind dynamics lookup table associated with this voltage and reactive power wind plant model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.WindDynamicsLookupTable`
| Cardinality
| 1..*
| Type
| xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`]


|===

////
[.text-left]
--
<<slots_table.WindDynamicsLookupTable,&#10548;>>
--
////


//[discrete]
[#WindPlantIEC]
=== `WindPlantIEC`
+++Wind plant reactive control model associated with this wind plant.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.WindPlantIEC`
| Cardinality
| 1
| Type
| xref::class/WindPlantIEC.adoc[`WindPlantIEC`]


|===

////
[.text-left]
--
<<slots_table.WindPlantIEC,&#10548;>>
--
////


//[discrete]
[#windPlantQcontrolModesType]
=== `windPlantQcontrolModesType`
+++Reactive power/voltage controller mode (<i>M</i><i><sub>WPqmode</sub></i>). It is a case-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.windPlantQcontrolModesType`
| Cardinality
| 0..1
| Type
| xref::enumeration/WindPlantQcontrolModeKind.adoc[`WindPlantQcontrolModeKind`]


|===

////
[.text-left]
--
<<slots_table.windPlantQcontrolModesType,&#10548;>>
--
////


//[discrete]
[#xrefmax]
=== `xrefmax`
+++Maximum <i>x</i><sub>WTref</sub> (<i>q</i><i><sub>WTref</sub></i> or delta<i> u</i><i><sub>WTref</sub></i>) request from the plant controller (<i>x</i><i><sub>refmax</sub></i>) (&gt; WindPlantReactiveControlIEC.xrefmin). It is a case-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.xrefmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.xrefmax,&#10548;>>
--
////


//[discrete]
[#xrefmin]
=== `xrefmin`
+++Minimum <i>x</i><i><sub>WTref</sub></i> (<i>q</i><i><sub>WTref</sub></i> or delta <i>u</i><i><sub>WTref</sub></i>) request from the plant controller (<i>x</i><i><sub>refmin</sub></i>) (&lt; WindPlantReactiveControlIEC.xrefmax). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindPlantReactiveControlIEC.xrefmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.xrefmin,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`] | xref::class/WindDynamicsLookupTable.adoc#WindPlantReactiveControlIEC[`WindPlantReactiveControlIEC`]



| xref::class/WindPlantIEC.adoc[`WindPlantIEC`] | xref::class/WindPlantIEC.adoc#WindPlantReactiveControlIEC[`WindPlantReactiveControlIEC`]


|===

